--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <meta name="wiewport" content="widht=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>CLEAR DICTIONARY</title>
   </head>
   <body>
-    <header>
+  <header>
       <div class="headerDiv">
         <center class="judul">
           <h1>CLEAR DICTIONARY</h1>
@@ -17,17 +18,24 @@
       </div>
     </header>
   <div class="container">
-    <input id="input" type="text" placeholder="Insert here...">
-    <button id="button" type="button" name="button">Search</button>
+    <form>
+      <input id="input" type="text" placeholder="Insert here...">
+      <button id="button" type="button" name="button">Search</button>
+    </form>
   </div>
-<div class="result">
-  <div class="">
+  <center>
+    <div id="wait">
+      <p>Please Wait...</p>
+    </div>
+  </center>
+  <center>
+<div id="result">
 
-  </div>
 </div>
+</center>
 
-<footer>Written and Code by armanrozika<br>reserved for icon</footer>
 
 <script src="main.js" type="text/javascript"></script>
   </body>
+  <footer>Written and Code by armanrozika<br>reserved for icon</footer>
 </html>
